[gd_scene load_steps=3 format=3 uid="uid://achievement_item"]

[ext_resource type="Script" path="res://Scripts/UI/achievement_item.gd" id="1_achievement_item"]
[ext_resource type="Theme" uid="uid://b482uksqacwcy" path="res://Scenes/components/game_theme.tres" id="2_theme"]

[node name="AchievementItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(0, 100)
theme = ExtResource("2_theme")
script = ExtResource("1_achievement_item")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="IconContainer" type="Control" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)

[node name="IconTexture" type="TextureRect" parent="HBoxContainer/IconContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ContentContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="HBoxContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
text = "Achievement Title"
horizontal_alignment = 0
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
text = "Achievement description goes here"
horizontal_alignment = 0
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="HBoxContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
visible = false
text = "5/10"
horizontal_alignment = 0
vertical_alignment = 1

[node name="StatusContainer" type="Control" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="StatusIcon" type="TextureRect" parent="HBoxContainer/StatusContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
